deployment/k8s/ingress.yaml
# SDACS Nginx Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sdacs
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: sdacs.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sdacs
                port:
                  number: 8050
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: sdacs
                port:
                  number: 8000
